--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<!DOCTYPE html><html><head><title>Daily Gain</title></head><body><h1>Daily Gain - Bro Split</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#2b2d42">
+  <title>Daily Gain - Bro Split Tracker</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    h1 { background: #2b2d42; color: white; padding: 15px; margin: 0; }
+    form { margin: 20px auto; padding: 10px; background: white; border-radius: 10px; width: 90%; max-width: 400px; }
+    label { display: block; margin-top: 10px; }
+    input, select, button { width: 100%; padding: 8px; margin-top: 5px; }
+    .workout-log { margin-top: 20px; max-width: 600px; margin-left: auto; margin-right: auto; }
+    .log-item { background: white; padding: 10px; margin: 5px; border-radius: 5px; }
+  </style>
+</head>
+<body>
+  <h1>Daily Gain - Bro Split</h1>
+
+  <form id="workoutForm">
+    <label for="day">Day:</label>
+    <select id="day" required>
+      <option value="">Select</option>
+      <option>Chest</option>
+      <option>Back</option>
+      <option>Shoulders</option>
+      <option>Arms</option>
+      <option>Legs</option>
+    </select>
+
+    <label for="exercise">Exercise:</label>
+    <input type="text" id="exercise" placeholder="e.g., Bench Press" required>
+
+    <label for="reps">Reps:</label>
+    <input type="number" id="reps" min="1" required>
+
+    <label for="weight">Weight (kg):</label>
+    <input type="number" id="weight" min="0" step="0.5" required>
+
+    <button type="submit">Add Workout</button>
+  </form>
+
+  <div class="workout-log" id="workoutLog"></div>
+
+  <script src="app.js"></script>
+</body>
+</html>
