--- a/index.html
+++ b/index.html
@@ -3,31 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Gain Tracker</title>
+    <title>Daily Gain - Bro Split Tracker</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#222">
 </head>
 <body>
-    <div class="container">
-        <h1>💪 Daily Gain Tracker</h1>
+    <header>
+        <h1>💪 Bro Split Workout Tracker</h1>
+    </header>
 
-        <!-- Login Form -->
-        <div id="login-section">
-            <input type="text" id="username" placeholder="Enter username">
-            <button onclick="login()">Login</button>
-        </div>
+    <main>
+        <section id="workout-form">
+            <label for="day">Workout Day:</label>
+            <select id="day">
+                <option>Chest</option>
+                <option>Back</option>
+                <option>Shoulders</option>
+                <option>Arms</option>
+                <option>Legs</option>
+            </select>
 
-        <!-- App Section -->
-        <div id="app-section" style="display:none;">
-            <p>Logged in as <strong id="current-user"></strong> <button onclick="logout()">Logout</button></p>
+            <label for="exercise">Exercise:</label>
+            <input type="text" id="exercise" placeholder="Bench Press">
 
-            <input type="text" id="gain-input" placeholder="Enter today's gain">
-            <button onclick="saveGain()">Save</button>
+            <label for="weight">Weight (kg):</label>
+            <input type="number" id="weight">
 
-            <h3>Your Gains</h3>
-            <ul id="gain-list"></ul>
-        </div>
-    </div>
+            <label for="reps">Reps:</label>
+            <input type="number" id="reps">
+
+            <button id="add-btn">Add Set</button>
+        </section>
+
+        <section id="log">
+            <h2>Workout Log</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Exercise</th>
+                        <th>Weight</th>
+                        <th>Reps</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                <tbody id="log-body"></tbody>
+            </table>
+        </section>
+    </main>
+
+    <footer>
+        <p>🏋️ Daily Gain | Track your bro split gains!</p>
+    </footer>
 
     <script src="app.js"></script>
 </body>
